force-app/main/default/objects/Case/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <description>This field is a dependent field of type, showing subtypes for each type</description>
    <inlineHelpText>Pick a subtype for the type of the case</inlineHelpText>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Creditering</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Termination</fullName>
            </value>
            <value>
                <fullName>Product change</fullName>
            </value>
            <value>
                <fullName>Cable Request (no related products)</fullName>
            </value>
            <value>
                <fullName>Consulting hours</fullName>
            </value>
            <value>
                <fullName>New Product</fullName>
            </value>
            <value>
                <fullName>Incident</fullName>
            </value>
            <value>
                <fullName>Set-up</fullName>
            </value>
            <value>
                <fullName>Returned letter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>