force-app/main/default/objects/Case/fields/Telia_Circuit_ID__c.field-meta.xml
<CustomField>
    <fullName>Telia_Circuit_ID__c</fullName>
    <description>MK - 11.08.2021 - Needed for identifying the circuit instead of reading through a long email thread.</description>
    <label>Telia Circuit ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>