force-app/main/default/objects/Case/fields/Telia_Sales_Rep_Phone__c.field-meta.xml
<CustomField>
    <fullName>Telia_Sales_Rep_Phone__c</fullName>
    <description>ACTIVATION. Used on product activation in Tech</description>
    <formula>Quote__r.SBQQ__Opportunity2__r.Owner.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Phone on Responsible sales rep as indicated on Opportunity</inlineHelpText>
    <label>Telia Sales Rep Phone</label>
    <type>Text</type>
</CustomField>