force-app/main/default/objects/Case/fields/To_Be_Deleted__c.field-meta.xml
<CustomField>
    <fullName>To_Be_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>To Be Deleted</label>
    <type>Checkbox</type>
</CustomField>