force-app/main/default/objects/Case/fields/TPX_Billing_Number__c.field-meta.xml
<CustomField>
    <fullName>TPX_Billing_Number__c</fullName>
    <label>TPX Billing Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>