force-app/main/default/objects/Case/fields/TR_Status__c.field-meta.xml
<CustomField>
    <fullName>TR_Status__c</fullName>
    <description>When a number is transferred from Telia Enterprise to Telia Private this shows the Telephony Responsible Status for the case. Has the TR Approved or Rejected the transfer. This field is set by the Robot.</description>
    <inlineHelpText>Shows the status of the number transfer case. Set by the system.</inlineHelpText>
    <label>TR Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>