force-app/main/default/objects/Case/fields/Transfer_date__c.field-meta.xml
<CustomField>
    <fullName>Transfer_date__c</fullName>
    <description>If the Case is about number transfer from Telia Enterprise to Telia Private then this is the date for when the number shall be  transferred. Read by the robot.</description>
    <inlineHelpText>The date when a number shall transfer from Telia Enterprise to Telia Private. Only relevant for Telia internal number transfer.</inlineHelpText>
    <label>Transfer date</label>
    <type>Date</type>
</CustomField>