force-app/main/default/objects/Case/fields/Type_and_Subject__c.field-meta.xml
<CustomField>
    <fullName>Type_and_Subject__c</fullName>
    <formula>CaseNumber + &apos; - &apos; + Subject + &apos; - &apos; +  Opportunity_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type and Subject</label>
    <type>Text</type>
</CustomField>