force-app/main/default/objects/Case/fields/UC_Data_Gathering_Report__c.field-meta.xml
<CustomField>
    <fullName>UC_Data_Gathering_Report__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Report/00O1i000001SOvLEAW/view?fv0=&quot;&amp; Id, &quot;UC Data Gathering Report&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Generates a report that can be exported to excel and sent to the customer for enrichment</inlineHelpText>
    <label>UC Data Gathering Report</label>
    <type>Text</type>
</CustomField>