force-app/main/default/objects/Case/fields/UC_Invoicing__c.field-meta.xml
<CustomField>
    <fullName>UC_Invoicing__c</fullName>
    <description>ACTIVATION. Generates report to get an overview of UC invoicing</description>
    <formula>HYPERLINK(&quot;/lightning/r/Report/00O1i000001aiwDEAQ/view?fv0=&quot;&amp; Id, &quot;UC invoicing&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Generates report to get an overview of UC invoicing</inlineHelpText>
    <label>UC Invoicing</label>
    <type>Text</type>
</CustomField>