force-app/main/default/objects/Case/fields/Upload__c.field-meta.xml
<CustomField>
    <fullName>Upload__c</fullName>
    <formula>HYPERLINK(&quot;https://podio.com/webforms/24807334/1818171?fields[tekst]=&quot; &amp; CaseNumber, &quot;Upload Completed Data Gathering Report&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Upload</label>
    <type>Text</type>
</CustomField>