force-app/main/default/objects/Case/fields/Validation_Check_Result__c.field-meta.xml
<CustomField>
    <fullName>Validation_Check_Result__c</fullName>
    <description>Calculates if Delivery address differs in ExtraDatacard activation lines and if VAS selection is not completed yet</description>
    <inlineHelpText>Calculates if Delivery address differs in ExtraDatacard activation lines and if VAS selection is not completed yet</inlineHelpText>
    <label>Validation_Check_Result</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>