force-app/main/default/objects/Case/fields/Validation_UC__c.field-meta.xml
<CustomField>
    <fullName>Validation_UC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for UC team to mark the Validation completed</description>
    <label>Validation UC</label>
    <type>Checkbox</type>
</CustomField>