force-app/main/default/objects/Case/fields/WBS_Fiber__c.field-meta.xml
<CustomField>
    <fullName>WBS_Fiber__c</fullName>
    <label>WBS Fiber</label>
    <length>30</length>
    <type>Text</type>
</CustomField>