force-app/main/default/objects/Case/fields/WBS_number__c.field-meta.xml
<CustomField>
    <fullName>WBS_number__c</fullName>
    <description>WBS number used to register time on this case.</description>
    <inlineHelpText>WBS number used to register time on this case.</inlineHelpText>
    <label>WBS number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>