force-app/main/default/objects/Case/fields/WBS_Opex__c.field-meta.xml
<CustomField>
    <fullName>WBS_Opex__c</fullName>
    <label>WBS Opex</label>
    <length>30</length>
    <type>Text</type>
</CustomField>