force-app/main/default/objects/Case/fields/X1_Day__c.field-meta.xml
<CustomField>
    <fullName>X1_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TSFDK-138 - MK 09-06-2021 - This checkbox is used to push the follow-up date 1 day.</description>
    <inlineHelpText>Check to follow-up in one working day from today.</inlineHelpText>
    <label>1 Day</label>
    <type>Checkbox</type>
</CustomField>