force-app/main/default/objects/Case/fields/X1st_Contact_Set__c.field-meta.xml
<CustomField>
    <fullName>X1st_Contact_Set__c</fullName>
    <defaultValue>false</defaultValue>
    <label>1st Contact Set</label>
    <type>Checkbox</type>
</CustomField>