force-app/main/default/objects/Case/fields/X3_Days__c.field-meta.xml
<CustomField>
    <fullName>X3_Days__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TSFDK-138 - MK 09-06-2021 - This checkbox is used to push the follow-up date 3 days.</description>
    <inlineHelpText>Check to follow-up in three working days from today.</inlineHelpText>
    <label>3 Days</label>
    <type>Checkbox</type>
</CustomField>