force-app/main/default/objects/Case/recordTypes/Customer_Service_Case.recordType-meta.xml
<RecordType>
    <fullName>Customer_Service_Case</fullName>
    <active>true</active>
    <businessProcess>Customer Service Process</businessProcess>
    <description>CS. Used for customer requests regarding service and support</description>
    <label>Customer Service Case</label>
</RecordType>