force-app/main/default/objects/Case/recordTypes/Data_Steward_case.recordType-meta.xml
<RecordType>
    <fullName>Data_Steward_case</fullName>
    <active>true</active>
    <businessProcess>Internal Support Process</businessProcess>
    <description>When creating cases for your internal support team</description>
    <label>Internal Support</label>
</RecordType>