force-app/main/default/objects/Case/recordTypes/Order_Fulfilment_Case.recordType-meta.xml
<RecordType>
    <fullName>Order_Fulfilment_Case</fullName>
    <active>true</active>
    <businessProcess>Order Fulfilment Process</businessProcess>
    <description>A case that is an order fulfilment, e.g. for activating a mobile or data product.</description>
    <label>Order Fulfilment Case</label>
</RecordType>