force-app/main/default/objects/Case/validationRules/Add_Description_before_moving_case.validationRule-meta.xml
<ValidationRule>
    <fullName>Add_Description_before_moving_case</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(Status),
ISPICKVAL(PRIORVALUE(Status),&quot;Sales enrichment&quot;),
ISPICKVAL( Status , &quot;Front Office&quot;),
ISBLANK( Description ),
ISPICKVAL( Type , &apos;Voice&apos;)
)</errorConditionFormula>
    <errorMessage>Please add a Description before moving the Case to Front Office</errorMessage>
</ValidationRule>