force-app/main/default/objects/Case/validationRules/Case_Owner_Update_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Owner_Update_check</fullName>
    <active>false</active>
    <description>The user can not accept the case if it is owned by another user (not a queue)</description>
    <errorConditionFormula>AND(
ISCHANGED( OwnerId ) , RecordType.Name = &apos;Customer Service Case&apos;,
NOT(ISBLANK(PRIORVALUE(Owner_role__c))) , OwnerId = $User.Id
)</errorConditionFormula>
    <errorMessage>The case is already assigned to another user</errorMessage>
</ValidationRule>