force-app/main/default/objects/Case/validationRules/Contract_compliant_before_activating.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_compliant_before_activating</fullName>
    <active>true</active>
    <description>Ensure that the activation case is compliant with the signed contract before progressing the activation case.</description>
    <errorConditionFormula>RecordType.DeveloperName =&quot;Order_Fulfilment_Case&quot; &amp;&amp;
ISBLANK(TEXT(Contract_compliant__c)) &amp;&amp;
(
  ISPICKVAL(Status, &quot;Setup billing&quot;) ||
  ISPICKVAL(Status, &quot;Plan delivery&quot;) ||
  ISPICKVAL(Status, &quot;Build solution&quot;) ||
  ISPICKVAL(Status, &quot;Onboarding and training&quot;) ||
  ISPICKVAL(Status, &quot;Time registration&quot;) ||
  ISPICKVAL(Status, &quot;Closed&quot;)
)</errorConditionFormula>
    <errorMessage>You must check that the activation case is within a 10% margin of the contractual agreement. Select &quot;Contract compliant&quot; Yes or No.</errorMessage>
</ValidationRule>