force-app/main/default/objects/Case/validationRules/Follow_up_Options_control.validationRule-meta.xml
<ValidationRule>
    <fullName>Follow_up_Options_control</fullName>
    <active>true</active>
    <description>TSFDK-138 - MK 10-06-2021 - Only one follow-up option should be selected.</description>
    <errorConditionFormula>OR(
AND( X1_Day__c  &lt;&gt; false,(Clear_Follow_up_date__c  &lt;&gt;  false || X2_Days__c  &lt;&gt;  false || X3_Days__c  &lt;&gt;  false ||  NOT(ISBLANK(Choose_Date__c)))),
AND( Clear_Follow_up_date__c  &lt;&gt;  false,(X1_Day__c  &lt;&gt; false|| X2_Days__c  &lt;&gt;  false || X3_Days__c  &lt;&gt;  false ||  NOT(ISBLANK(Choose_Date__c)))),
AND( X2_Days__c  &lt;&gt; false,(Clear_Follow_up_date__c  &lt;&gt;  false || X1_Day__c  &lt;&gt;  false || X3_Days__c  &lt;&gt;  false ||  NOT(ISBLANK(Choose_Date__c)))),
AND( X3_Days__c  &lt;&gt; false,(Clear_Follow_up_date__c  &lt;&gt;  false || X2_Days__c  &lt;&gt;  false || X1_Day__c  &lt;&gt;  false ||  NOT(ISBLANK(Choose_Date__c)))),
AND( NOT(ISBLANK(Choose_Date__c)),(Clear_Follow_up_date__c  &lt;&gt;  false || X2_Days__c  &lt;&gt;  false || X3_Days__c  &lt;&gt;  false ||  X1_Day__c  &lt;&gt; false)))</errorConditionFormula>
    <errorMessage>Only one option can be selected.</errorMessage>
</ValidationRule>