force-app/main/default/objects/Case/validationRules/Prevent_change_of_Case_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_change_of_Case_Status</fullName>
    <active>true</active>
    <description>Only Enterprise Service should be allowed to change certain Case Statuses</description>
    <errorConditionFormula>AND (

    ISCHANGED( Status ),

 RecordTypeId = &apos;0121i000000Trq0AAC&apos;,
 
OR(

NOT($Profile.Name = &quot;Telia Enterprise Service&quot;),

NOT($Profile.Name = &quot;System Administrator&quot;),

NOT($Profile.Name = &quot;Telia Enterprise Customer Service&quot;)),

 
OR(
    ISPICKVAL(Status, &quot;Gather Information&quot;),
 
ISPICKVAL(Status, &quot;Delivery&quot;),

ISPICKVAL(Status, &quot;Contract Compliance&quot;),

ISPICKVAL(Status, &quot;Close Case&quot;),

ISPICKVAL(Status, &quot;Closed&quot;)

)
)</errorConditionFormula>
    <errorMessage>You are not allowed to move the Case to this Status</errorMessage>
</ValidationRule>