force-app/main/default/objects/Case/validationRules/Prevent_going_back_to_FO.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_going_back_to_FO</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
ISPICKVAL(PRIORVALUE(Status),&quot;Gather Information&quot;) &amp;&amp; ISPICKVAL(Status,&quot;Front Office&quot;) &amp;&amp;
$Profile.Name != &quot;System Administrator&quot;

,

ISPICKVAL(PRIORVALUE(Status),&quot;Delivery&quot;) &amp;&amp; ISPICKVAL(Status,&quot;Gather Information&quot;) &amp;&amp;
$Profile.Name != &quot;System Administrator&quot;
)</errorConditionFormula>
    <errorMessage>You cannot move the Case Status backwards.</errorMessage>
</ValidationRule>