force-app/main/default/objects/Case/validationRules/Root_BAN_9_Characters.validationRule-meta.xml
<ValidationRule>
    <fullName>Root_BAN_9_Characters</fullName>
    <active>false</active>
    <description>Root BAN must be 9 characters long.</description>
    <errorConditionFormula>LEN( Root_BAN__c) != 9 &amp;&amp; LEN( Root_BAN__c) != 0</errorConditionFormula>
    <errorDisplayField>Root_BAN__c</errorDisplayField>
    <errorMessage>Root BAN must be 9 characters long.</errorMessage>
</ValidationRule>