force-app/main/default/objects/Case/validationRules/Send_1st_Contact_before_moving_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>Send_1st_Contact_before_moving_Case</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
 ISCHANGED( Status) , 
 OR(ISPICKVAL( Status , &apos;Delivery&apos;),ISPICKVAL( Status , &apos;Contract Compliance&apos;), ISPICKVAL( Status , &apos;Close Case&apos;), ISPICKVAL( Status , &apos;Closed&apos;)),
 ISPICKVAL( PRIORVALUE(Status) ,&apos;Gather Information&apos;), 
 X1st_Contact_Set__c != true,
 ISPICKVAL( Type , &apos;Voice&apos;),
 Validation_UC__c = false
)</errorConditionFormula>
    <errorMessage>You must send a 1st Contact Email or make an UC Validation before moving the Case</errorMessage>
</ValidationRule>