force-app/main/default/objects/Case/validationRules/Send_Confirmation_before_moving_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>Send_Confirmation_before_moving_Case</fullName>
    <active>true</active>
    <description>Prevents users from moving the Case to Gather Information before sending the Order Confirmation</description>
    <errorConditionFormula>AND( 
 ISCHANGED( Status) , 
 ISPICKVAL( Status , &apos;Gather Information&apos;),
 ISPICKVAL( PRIORVALUE(Status) ,&apos;Front Office&apos;), 
 Confirmation_Sent__c != true,

OR(
 ISPICKVAL( Type , &apos;Voice&apos;),
 ISPICKVAL( Type , &apos;Home office&apos;),
 ISPICKVAL( Type , &apos;Fiber&apos;),
 ISPICKVAL( Type , &apos;4G&apos;),
 ISPICKVAL( Type , &apos;DDoS&apos;),
 ISPICKVAL( Type , &apos;Firewall&apos;)
)
)</errorConditionFormula>
    <errorMessage>You must send an Order Confirmation before moving the Case to Gather Information</errorMessage>
</ValidationRule>