force-app/main/default/objects/Case/validationRules/Validate_Enrichment_before_moving_case.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Enrichment_before_moving_case</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISCHANGED(Status), 
ISPICKVAL(PRIORVALUE(Status),&quot;Sales Enrichment&quot;),
ISPICKVAL( Status , &quot;Front Office&quot;), 
OR(
ISPICKVAL( Number_List__c , &quot;&quot;), ISPICKVAL(   Power_of_attorney__c   , &quot;&quot;), ISPICKVAL(  SIP_Trunk_IP_Address__c  , &quot;&quot;)
)
,   
 ISPICKVAL( Type , &apos;Fixed&apos;)
)

||

AND( 
ISCHANGED(Status), 
ISPICKVAL(PRIORVALUE(Status),&quot;Sales Enrichment&quot;),
ISPICKVAL( Status , &quot;Front Office&quot;), 
OR(
ISPICKVAL(Order_Form__c, &quot;&quot;), ISPICKVAL( Cable_Sheet_Provided__c , &quot;&quot;)
),   
 ISPICKVAL( Type , &apos;Fiber&apos;)
)
||

AND( 
ISCHANGED(Status), 
ISPICKVAL(PRIORVALUE(Status),&quot;Sales Enrichment&quot;),
ISPICKVAL( Status , &quot;Front Office&quot;), 
ISPICKVAL(Order_Form__c, &quot;&quot;),
   
 ISPICKVAL( Type , &apos;4G&apos;)
)
||

AND( 
ISCHANGED(Status), 
ISPICKVAL(PRIORVALUE(Status),&quot;Sales Enrichment&quot;),
ISPICKVAL( Status , &quot;Front Office&quot;), 
OR(
ISPICKVAL(  Power_of_attorney__c  , &quot;&quot;),   Customer_Data_Provided__c  = FALSE
),   
  ISPICKVAL( Type , &apos;Voice&apos;)
)</errorConditionFormula>
    <errorMessage>Please review the Sales Enrichment section before you move the Case to Front Office</errorMessage>
</ValidationRule>