force-app/main/default/objects/Case/listViews/ACE_kunder.listView-meta.xml
<ListView>
    <fullName>ACE_kunder</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>Case_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>ASE,Danish Agro,Davidsens Tømmerhandel,KEN Hygiene,Rema 1000,LB Forsikring,HK Danmark,GF Forsikring,BRØDRENE A. &amp; O. JOHANSEN</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>ACE kunder</label>
</ListView>