force-app/main/default/objects/Case/listViews/ACTIVATION_boarding_Fastnet_Case.listView-meta.xml
<ListView>
    <fullName>ACTIVATION_boarding_Fastnet_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>ACTIVATION - Onboarding: Fastnet</label>
    <queue>ACTIVATION_boarding_Fastnet</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>