force-app/main/default/objects/Case/listViews/ACTIVATION_Boarding_Multiproduct_Case.listView-meta.xml
<ListView>
    <fullName>ACTIVATION_Boarding_Multiproduct_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Front Office,Gather information,Close case,Closed</value>
    </filters>
    <label>ACTIVATION - Onboarding: Multiproduct</label>
    <queue>ACTIVATION_Boarding_Multiproduct</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>