force-app/main/default/objects/Case/listViews/ACTIVATION_Boarding_Review_Case.listView-meta.xml
<ListView>
    <fullName>ACTIVATION_Boarding_Review_Case</fullName>
    <columns>SLA_Status__c</columns>
    <columns>Milestone_Target_date__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.EMAIL</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Front Office,Gather information,Close case,Closed</value>
    </filters>
    <label>ACTIVATION - Onboarding: Review</label>
    <queue>ACTIVATION_Boarding_Review</queue>
</ListView>