force-app/main/default/objects/Case/listViews/ACTIVATION_Delivery.listView-meta.xml
<ListView>
    <fullName>ACTIVATION_Delivery</fullName>
    <columns>CASES.SUBJECT</columns>
    <columns>NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>Opportunity_Type__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>No_of_Lines__c</columns>
    <filterScope>Queue</filterScope>
    <label>ACTIVATION - Delivery</label>
    <queue>ACTIVATION_Delivery</queue>
</ListView>