force-app/main/default/objects/Case/listViews/ACTIVATION_Delivery_ACE_Cloud_Case.listView-meta.xml
<ListView>
    <fullName>ACTIVATION_Delivery_ACE_Cloud_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>ACTIVATION - Delivery: ACE Cloud</label>
    <queue>ACTIVATION_Delivery_ACE_Cloud</queue>
    <sharedTo>
        <roleAndSubordinates>Head_of_Delivery</roleAndSubordinates>
    </sharedTo>
</ListView>