force-app/main/default/objects/Case/listViews/ACTIVATION_Delivery_Case.listView-meta.xml
<ListView>
    <fullName>ACTIVATION_Delivery_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>Opportunity_Type__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.TYPE</columns>
    <filterScope>Queue</filterScope>
    <label>ACTIVATION - Delivery</label>
    <queue>ACTIVATION_Delivery</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>