force-app/main/default/objects/Case/listViews/ACTIVATION_Delivery_Data_Case.listView-meta.xml
<ListView>
    <fullName>ACTIVATION_Delivery_Data_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.TYPE</columns>
    <columns>Subtype__c</columns>
    <columns>ProductGroup__c</columns>
    <columns>SLA_trigger__c</columns>
    <columns>SLA_Status__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>CASES.TYPE</field>
        <operation>equals</operation>
        <value>Data,Telia Home Office,Fiber,Copper</value>
    </filters>
    <label>ACTIVATION - Delivery: Data</label>
    <queue>ACTIVATION_Delivery_Data</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>