force-app/main/default/objects/Case/listViews/ACTIVATION_Delivery_Multiproduct_Case.listView-meta.xml
<ListView>
    <fullName>ACTIVATION_Delivery_Multiproduct_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>ACTIVATION - Delivery: Multiproduct</label>
    <queue>ACTIVATION_Delivery_Multiproduct</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>