force-app/main/default/objects/Case/listViews/ACTIVATION_Delivery_Review_Case.listView-meta.xml
<ListView>
    <fullName>ACTIVATION_Delivery_Review_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Created_time__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.TYPE</columns>
    <columns>Subtype__c</columns>
    <columns>ProductGroup__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Close case,Closed</value>
    </filters>
    <filters>
        <field>ProductGroup__c</field>
        <operation>equals</operation>
        <value>Data,Fixed,Telia Home Office,Fiber,Copper,Grossist Fixed,Cross-Border</value>
    </filters>
    <label>ACTIVATION - Delivery: Review</label>
    <queue>ACTIVATION_Delivery_Review</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>