force-app/main/default/objects/Case/listViews/ACTIVATION_DiscountGroup.listView-meta.xml
<ListView>
    <fullName>ACTIVATION_DiscountGroup</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>ACTIVATION - DiscountGroup +</label>
</ListView>